Changes related to string formattings

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ TWITTER_ACCESS_TOKEN=WRITE_YOUR_TWITTER_ACCESS_TOKEN
 TWITTER_ACCESS_SECRET=WRITE_YOUR_TWITTER_ACCESS_SECRET
 TWITTER_BEARER_TOKEN=WRITE_YOUR_TWITTER_BEARER_TOKEN
 OPEN_AI_TEST_KEY=WRITE_YOUR_OPEN_AI_KEY
+OPEN_AI_ORG_ID=WRITE_YOUR_OPEN_AI_ORG_ID
+AI_URL=WRITE_YOUR_AI_URL
+
