--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cron": "^2.3.0",
     "dotenv": "^16.0.3",
+    "openai": "^3.2.1",
     "twitter-api-v2": "^1.14.2"
   }
 }
